front-end: port javascript to purescript

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -12,7 +12,10 @@
 	<div id="map" style="width: 600px; height: 400px"></div>
 
     <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
-    <script src="geocache-history.js"><script>
-    <script>main();</script>
+    <script src="output.js"><script>
+    <script>
+        var Main = PS.Main;
+        Main.main();
+    </script>
 </body>
 </html>
