front-end: use local leaflet

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,12 +6,12 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
+    <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
 </head>
 <body>
 	<div id="map" style="width: 600px; height: 400px"></div>
 
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
+    <script src="bower_components/leaflet/dist/leaflet.js"></script>
     <script src="output.js"><script>
     <script>
         var Main = PS.Main;
