front-end: playing around with purescript-react

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -12,6 +12,7 @@
 	<div id="map" style="width: 600px; height: 400px"></div>
 
     <script src="bower_components/leaflet/dist/leaflet.js"></script>
+    <script src="bower_components/react/react.js"></script>
     <script src="output.js"><script>
     <script>
         var Main = PS.Main;
